	Added Aperture support on OS X (thanks, coax-!)
	Added thumbnail support for images (some code from http://www.rayinblu.com/ps3mediaserver)
	The cache is now reset after each upgrade/downgrade (for versions higher than 1.40.0)
	Files with the extension *.vdr are now recognized as MPG videos
	Added support for JPEG Multi-Picture Format (.mpo) files

2011-07-06 - 1.30.1

	Fixed bug that caused very slow iTunes library parsing

2011-07-05 - 1.30.0

	Backwards-incompatible API changes (for plugin developers/packagers) - see http://tinyurl.com/3hbqv4l for more details
	Updated OS X binaries (FFmpeg, MEncoder and MPlayer) to fix an AC3 bug and improve internal VOBsub display quality
	Optional GUI to allow profile to be selected when PMS starts
	Better UPnP spec compliance
	Logging improvements
	ASS/SSA subtitles disabled by default on Linux and OS X
	Multithreaded MEncoder enabled by default on multithreaded CPUs
	Subtitles stay within confines of original frame when using overscan compensation
	Made transcoding tab resizing consistent for all sizes
	Fixed DTS audio support with FFmpeg
	MEncoder supports DTS-ES (6.1 channels) audio
	Handles unknown audio channels
	Change maximum number of plugins to 30 from 4
	Improved MP4 support
	New Korean translation (thanks, mrahn80)
	Fixed bug where config sometimes wouldn't save on Windows 7

2011-06-17 - 1.25.1

	Overscan compensation bug fixed

2011-06-16 - 1.25.0

	Overscan compensation feature added for MEncoder
	Return of the official OS X build, thanks for your patience!
	MEncoder no longer crashes when using more then 8 cores
	New build script for OS X that builds all dependencies (big thanks to Raptor399)
	French translation fixed

2011-06-14 - 1.24.0

	New icon on OS X
	Added Bulgarian and Brazilian Portuguese translation (thanks to jordito and gelo)
	Updated Polish, French, German and Portuguese translation
	tsMuxeR handles mov files
	Updated FFmpeg to r30172 from r28671
	Updated JRE auto-dl