@@ -26,6 +26,8 @@ DLNALocalizationRequired=true
 TranscodeExtensions=dvr-ms,dvr,mkv,dv,ty,mov,ogm,hdmov,hdm,rmv,rmvb,rm,asf,evo,asx,flv,m2v,mpe,mod,tivo,ty,tmf,ts,tp,m2p,mp4,m4v,avi,wmv,wm,divx,div,flac,mlp,fla,wma,m4a,aac,dts,mka,ape,ogg,shn,mpc,ra,mp2,wv,oma,aa3,gif,png,arw,cr2,crw,dng,raf,mrw,nef,pef,tif,tiff
 StreamExtensions=
 
+# For Bravia TVs and Sony Bluray players
+ForceJPGThumbnails=true
 
 MediaInfo=true
 CreateDLNATreeFaster = true
