@@ -210,6 +210,18 @@ TranscodeExtensions =
 # and define "Supported" formats instead.
 StreamExtensions =
 
+# ForceJPGThumbnails: Some renderers only support thumbnails in JPG format
+# (e.g. Sony Bravia TVs and blu-ray players). Set this to true to force PMS
+# to send only JPG format thumbnails.
+ForceJPGThumbnails = false
+
+# ChunkedTransfer: Some renderers are particular about the "Content-Length"
+# headers in requests (e.g. Sony blu-ray players). By default, PMS will send
+# a "Content-Length" that refers to the total media size, even if the exact
+# length is unknown. Default value is false. Set this option to true to omit
+# sending a length when it is unknown.
+ChunkedTransfer = false
+
 
 #-----------------------------------------------------------------------------
 # IMAGES
